add stats endpoint+sqlite+doc
